--- a/fly.toml
+++ b/fly.toml
@@ -9,14 +9,18 @@ primary_region = 'fra'
 [build]
 
 [http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'suspend'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 8080
+force_https = true
+auto_stop_machines = 'suspend'
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
+
+[metrics]
+port = 8080
+path = "/metrics"
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 2
+memory = '1gb'
+cpu_kind = 'shared'
+cpus = 2
